--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.9",
+    "eventemitter3": "^5.0.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,8 +36,10 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.3",
     "@react-native/typescript-config": "0.73.1",
+    "@tsconfig/react-native": "^3.0.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
@@ -42,7 +47,11 @@
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "5.0.4"
+  },
+  "resolutions": {
+    "@types/react": "^18"
   },
   "engines": {
     "node": ">=18"
