--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/messaging": "^18.7.3",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/elements": "^1.3.21",
     "@react-navigation/native": "^6.1.9",
@@ -21,6 +23,7 @@
     "eventemitter3": "^5.0.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-device-info": "^10.12.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^4.8.2",
