--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
@@ -21,9 +22,11 @@
     "react-native-gesture-handler": "^2.15.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-permissions": "^4.1.2",
+    "react-native-reanimated": "3.6.0",
     "react-native-root-siblings": "4.1.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
