--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@tanstack/react-query": "4.32.6",
+    "dayjs": "^1.11.10",
+    "eventemitter3": "^5.0.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-geolocation-service": "^5.3.1",
@@ -26,7 +28,8 @@
     "react-native-root-siblings": "4.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^15.0.0"
+    "react-native-svg": "^15.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
