--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
-    "@tanstack/react-query": "4.32.6",
+    "@tanstack/react-query": "^5.24.1",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "eventemitter3": "^5.0.1",
     "react": "18.2.0",
